--- a/homework 3/homework 3.html
+++ b/homework 3/homework 3.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>hello fish!</h1>
-    <script src="/homework 3.js"></script>
+    <script src="/homework 3/homework 3.js"></script>
 </body>
 
 </html>
