--- a/homework 4/homework 4.html
+++ b/homework 4/homework 4.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1>hello fish!</h1>
-    <script src="/homework 4.js"></script>
+    <h1>hello duck!</h1>
+    <script src="/homework 4/homework 4.js"></script>
 </body>
 
 </html>
